--- a/app/views/user/_xtmpl_list_by_cosmap.html.erb
+++ b/app/views/user/_xtmpl_list_by_cosmap.html.erb
@@ -1,7 +1,7 @@
 <script type="text/x-tmpl" id="list_by_cosmap">
 {% var cm=o.course_map,user_courses=o.user_courses; %}
 {% var cfname=[]; %}
-<table class="table "style="border:0px">
+<table class="table table-bordered" style="border:0px">
 	{% var first_time=true; %} 
 	{% for(var i = 0,course ;course=user_courses[i];i++){ %}
 		{% if(course.cf_id==0){ %}
