--- a/app/views/user/all_courses.html.erb
+++ b/app/views/user/all_courses.html.erb
@@ -3,8 +3,10 @@
 		<h4 class="text-center">歷年課程</h4>
 	</div>
 	<br>
-	<div id="agree-container" class="container"></div>
-	<div id="course-container" class=""></div>
+	<div class="panel-body" >
+		<div id="agree-container" class="col-md-12"></div>
+		<div id="course-container" class="col-md-12"></div>
+	</div>
 </div>
 
 <script>
