--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -36,8 +36,16 @@
 				<li>
 					<a class="page-scroll" href="/books/" rel="nofollow">二手書</a>
 				</li>
-				<li>
+				<li class="dropdown">
 					<a class="page-scroll" href="/courses/">全校課程</a>
+					<ul class="dropdown-menu" style="background: rgba(0, 0, 0, 0.6);">
+						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+							<a href="/discusses/" style="color:white;">心得</a>
+						</li>
+						<li style="border-bottom: 1px #aaa solid;transition: linear 0.5s background;outline: none;">
+							<a href="/past_exams/" style="color:white;">考古題</a>
+						</li>
+					</ul>
 				</li>				
 				<li>
 					<a class="page-scroll" href="/courses/simulation">模擬排課</a>
