--- a/app/views/courses/search/course_map.html.erb
+++ b/app/views/courses/search/course_map.html.erb
@@ -22,8 +22,9 @@ function add_class(c_ids){ //action="add"
   				map_id : map_id,
   			},	
   			success: function(data){ 
+					console.log("aaaa");
   				var res = $.parseJSON(data);
-  				console.log(res.success);			
+  				console.log(res);			
   				if(res.fail > 0 ){
   					if(res.success>0)
   						alert("共加入了 "+res.success+" 門課程，另外有 "+res.fail+" 門課程重複。");
@@ -60,10 +61,10 @@ function add_class(c_ids){ //action="add"
   				c_ids : c_ids,
   			},	
   			success: function(data){ 
-  				var res = $.parseJSON(data);		
+  				var res = $.parseJSON(data);						
   				if(res.fail > 0 )
   					alert("有 "+res.fail+" 課程重複了");
-  				console.log(cg_show_id);	
+  			//	console.log(cg_show_id);	
   				load_group_treeview(cg_show_id, map_id);
   				$('#alert-msg').html('新增成功').show().fadeOut(3000);
   			},
