--- a/app/views/admin/user_statistics.html.erb
+++ b/app/views/admin/user_statistics.html.erb
@@ -1,6 +1,10 @@
 <%= javascript_include_tag "courses/content", "data-turbolinks-track" => true %>
 </br></br>
-<h3 class="text-center">註冊人數：<%=@user_type.reduce(:+)%> 匯入課程人數：<%=@import_cnt.to_s%> 總文章數：<%=@discuss_stat[1]%></h3>
+<h3 class="text-center">
+	註冊人數：<%=@user_type.reduce(:+)%> 
+	匯入課程人數：<%=@import_cnt.to_s%> 
+	總文章數：<%=@discuss_stat[1]%>
+</h3>
 <div id="user-type" style="min-width: 310px; height: 400px; max-width: 1000px; margin: 0 auto"></div>
 <hr>
 <div id="user-stat" style="min-width: 310px; height: 400px; max-width: 1000px; margin: 0 auto"></div>
