--- a/app/views/courses/search/_search_js.html.erb
+++ b/app/views/courses/search/_search_js.html.erb
@@ -5,28 +5,14 @@
 	}
 	function change_degree(obj){
 		var dept_sel=[];
-		dept_sel['3']='<%=j render "courses/search/undergrad_options" %>'
-		dept_sel['2']='<%=j render "courses/search/graduate_options" %>'
-		dept_sel['0']='<%=j render "courses/search/common_options" %>'
+		dept_sel['0']='';
+		dept_sel['1']='<%=j render "courses/search/undergrad_options" %>'
+		dept_sel['2']='<%=j render "courses/search/common_options" %>'
+		dept_sel['3']='<%=j render "courses/search/graduate_options" %>'
 		
 		$("#q_department_id_eq").html(dept_sel[obj.val()]);
+		$("#q_course_details_department_id_eq").html(dept_sel[obj.val()]);//if it's in course_maps/edit
 	}
-	function search_by_text(){
-		clean_input($("#dept_div"));
-		//clean_input($("#sem_div"));	
-		//$('#course_detail_search').submit();
-	}
-	function search_by_select(obj){
-		//alert(obj.attr("id"));
-		if(obj.attr("id")=="q_department_id_eq")
-			clean_input($("#text_div"));
-		
-		//$('#course_detail_search').submit();
-		$("form").submit();
-	}
-	$(document).ready(function(){
-		change_degree($("#degree"));
-		$("#q_department_id_eq").val('<%=@q.department_id_eq%>');
-		
-	});
+
+
 </script>
