--- a/app/views/courses/simulation.html.erb
+++ b/app/views/courses/simulation.html.erb
@@ -101,7 +101,7 @@
 	
 <script>
 	$(document).ready(function(){
-		toastr["success"]("已更新到104上的課程囉!!!");
+		//toastr["success"]("已更新到104上的課程囉!!!");
 <% if current_user.canShare? %>	
     new ZeroClipboard( $('#copy-it-simu') );	
 		$('#copy-it-simu').click(function(){toastr["success"]('已複製到剪貼簿');});
