--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
 					</ul>
 				</li>				
 				<li>
-					<a class="page-scroll" href="/courses/simulation">模擬排課</a>
+					<a class="page-scroll" href="/courses/simulation" data-no-turbolink>模擬排課</a>
 				</li>
 				<li>
 					<a class="page-scroll" href="/user/" data-no-turbolink>算學分</a>
