--- a/app/views/discusses/_main_form.html.erb
+++ b/app/views/discusses/_main_form.html.erb
@@ -1,16 +1,4 @@
-<script>
-	function change_check(obj){
-		if(obj.val()=="yes"){
-			obj.val("no");
-			$("#avatar").attr("src","<%="http://graph.facebook.com/#{session[:auth_facebook][:uid]}/picture"%>");
-		}
-		else{
-			obj.val("yes");
-			$("#avatar").attr("src","<%=asset_path("anonymous.jpg")%>");
-		}
-	}
-</script>
-<%= form_tag '/discusses/new', :role=>"form", :remote=>"true" do %>
+<%= form_for Discuss.new,url:{action:"create"}, :role=>"form", :remote=>"true" do |f|%>
 	<div class="panel panel-default bs-callout-success" style="border-left-width:5px;">
 
 		<div class="panel-heading row no-margin-left no-margin-right">
@@ -20,9 +8,8 @@
 				</div>
 				<div class="col-md-11">
 					<br>
-					<input type="text" class="form-control" name="title" id="main_discuss_title" placeholder="標題..." style="" required>
-					<input type="hidden" value="<%=@ct.id%>" name="ct_id">
-					<input type="hidden" value="main" name="type" id="type">
+					<%=f.text_field "title", class:"form-control", placeholder:"標題...",required:"true"%>
+					<%=f.hidden_field "course_teachership_id", value:@ct.id %>
 				</div>
 			<% else %>
 				<input type="text" class="form-control" id="main_title" placeholder="請先登入" disabled="true">
@@ -31,23 +18,24 @@
 
 		<div class="panel-body row">
 			<div class="col-md-12">
-				<textarea class="form-control " name="content" id="main_discuss_content" rows="5" placeholder="內容..." required></textarea>
+				
+				<%=f.text_area "content", class:"form-control" ,rows:"5", placeholder:"內容...", required:"true"%>
 			</div>
 		</div>
 		<div class="panel-footer row no-margin-left no-margin-right">
-			<div class="col-md-12">
+			<div class="col-md-12 text-right">
 			<% if current_user && current_user.uid %>
-				<p class="pull-right">
-				<!--同步分享至FB
-				<input type="checkbox" name="share" id="sync-share" onchange="change_check($(this))" class="" value="no" >
-				&nbsp;&nbsp;-->
-				匿名
-				<input type="checkbox" name="anonymous" id="anonymous" onchange="change_check($(this))" class="" value="no" >
+
+				<div class="checkbox" style="display:inline-block;">
+					<label style="font-size:18px">
+						<%=f.check_box "is_anonymous"%> 匿名
+					</label>
+				</div>
 				&nbsp;&nbsp;
-				<%= submit_tag "送出", :class=>"btn btn-primary " %>
-				</p>
+				<%= f.submit "送出", :class=>"btn btn-primary " %>
+
 			<% else %>
-				<%=link_to "/auth/facebook", class:"btn btn-primary pull-right" do %>
+				<%=link_to "/auth/facebook", class:"btn btn-primary " do %>
 					<%=fa_icon "facebook"%> fb登入
 				<% end %>
 			<% end %>
