--- a/app/views/discusses/show.html.erb
+++ b/app/views/discusses/show.html.erb
@@ -1,12 +1,13 @@
 <div class="col-md-12">
 	<div class="bs-callout bs-callout-default well">
 		<h3><%=fa_icon "comment-o"%>課程討論</h3>
-		<h4>請在此頁討論與課程內容有關的問題或發表心得，對選課或老師的評論可至上方課程資訊的作業/考試及其他內容編輯~</h4>
+		<!--<h4>請在此頁討論與課程內容有關的問題或發表心得，對選課或老師的評論可至上方課程資訊的作業/考試及其他內容編輯~</h4>
 		<h4 class="text-right">
 			<%=link_to "javascript:void(0);", onclick:"$('#main_title').focus();" do %>
 				<%=fa_icon "pencil-square-o" %>新增主題
 			<% end %>
 		</h4>
+		-->
 	</div>
 
 
@@ -55,7 +56,7 @@
 			</p>
 			</div>
 		</div>
-		<div class="panel-footer row" style="background-color:white;margin-left:0px;">
+		<div class="panel-footer row no-margin-left no-margin-right" style="background-color:white;">
 			<% discuss.sub_discusses.each do |sub_d| %>
 				<div class="sub-discussion col-md-offset-1 col-md-11" >
 					<div class="col-md-1">						
@@ -83,16 +84,7 @@
 							<% else %>
 								<%= fa_icon "thumbs-o-up 2x", title:"讚" %>
 							<% end %>
-							<span class="like-count like" id="sub_like_<%=sub_d.id%>"><%=sub_d.likes%></span>
-							<% if can_like_sub %>	
-								<%= fa_icon "thumbs-o-down 2x", title:"噓", class:"clickable-hover", onclick:"like(0,'sub',#{sub_d.id},$(this));"%>
-							<% else %>
-								<%= fa_icon "thumbs-o-down 2x", title:"噓" %>
-							<% end %>
-							<span class="like-count dislike" id="sub_dislike_<%=sub_d.id%>"><%=sub_d.dislikes%></span>
-							
-							
-							
+							<span class="like-count like" id="sub_like_<%=sub_d.id%>"><%=sub_d.likes%></span>		
 							</p>
 						</div>
 				</div>
